# template

./: .dockerignore  .gitignore  LICENSE
docker/aarch64/develop/: Dockerfile  docker-compose.yml
docker/develop/: Dockerfile  docker-compose.yml
package/: CMakeLists.txt  Cargo.toml  entrypoint.sh  package.xml  setup.cfg  setup.py
package/docker/: compose.yml  dev.Dockerfile  docker-compose.yml  prod.Dockerfile
package/include/package/: node.hpp
package/include/test/: test_package.hpp
package/package/: main.py  node.py
package/src/: main.cpp  main.rs  node.cpp
package/test/: test_package.cpp  test_package.py
package/tests/: test_package.rs
src/package/: entrypoint.sh  package.xml
src/package/include/package/: node.hpp
src/package/src/: node.cpp
src/template/: CMakeLists.txt  package.xml
